Add commands  __pycache__ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ package.json
 membership/__pycache__/
 membership/migrations/__pycache__/
 membershipdb/__pycache__/
+membership/management/commands/__pycache__/
 
 # Internal
 tmp/
