add static and gunicorn.conf to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,11 @@ node_modules/
 membership/__pycache__/
 membership/migrations/__pycache__/
 membershipdb/__pycache__/
-
+membership/management/__pycache__/
 membership/management/commands/__pycache__/
 
 # Internal
 tmp/
+membershipdb/gunicorn_conf
+static/
 
