--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ membership/migrations/__pycache__/
 membershipdb/__pycache__/
 membership/management/__pycache__/
 membership/management/commands/__pycache__/
+accounts/__pycache__/
+accounts/migrations/__pycache__/
 
 # Internal
 tmp/
