--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-countries==5.3.1
 django-money==0.14
 django-phonenumber-field==2.0.0
 django-tables2
+django-filter
 entrypoints==0.2.3
 html5lib==1.0.1
 ipykernel==4.8.2
